kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-svc
  labels:
    k8s-app: shiny-svc

# ports.targetPort is the port exposed by the Docker container
# ports.port is the port matched to the ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    k8s-app: shiny-app
  type: ClusterIP
